# xnt-wallet-app

./: .gitignore  README.md  flake.nix  index.html  package.json  taskfile.yml  vite.config.ts
leveldb-sys/: .gitignore
leveldb-sys/src/: lib.rs
src/: App.tsx  app.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  gui.rs  lib.rs  main.rs
src-tauri/src/command/: commands.rs  mod.rs
src-tauri/src/config/: config_migrate.rs  consts.rs  mod.rs  wallet.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/os/: mod.rs
src-tauri/src/prover/: mod.rs  proof_collection.rs  single_proof.rs
src-tauri/src/rpc/: block.rs  client.rs  commands.rs  error.rs  mod.rs  transaction_status.rs
src-tauri/src/rpc/tls/: aes.rs  mod.rs
src-tauri/src/rpc_client/: mod.rs
src-tauri/src/service/: app.rs  mod.rs  state.rs
src-tauri/src/session_store/: command.rs  mod.rs  persist.rs
src-tauri/src/wallet/: balance.rs  block_cache.rs  fake_archival_state.rs  fork.rs  input.rs  key_cache.rs  keys.rs  mod.rs  pending.rs  spend.rs  sync.rs  wallet_file.rs  wallet_state_table.rs
src/commands/: app.ts  config.ts  log.ts  os.ts  password.ts  wallet.ts
src/components/: TimeClock.tsx  copyed-icon.tsx  empty-table.tsx  loading-card.tsx  titlebar.css  windowTitlebarCard.tsx
src/components/base/ViewPort/: index.tsx
src/components/base/navbar-links-group/: index.module.css  index.tsx
src/components/card/: sync-block-card.tsx  sync.module.css
src/components/header/: withTitlePageHeader.tsx
src/components/icons/: icon-empty.tsx
src/components/navbar/: index.tsx  navbar.module.css
src/components/table/: custom-item.tsx
src/constant/: index.ts
src/database/types/: contact.ts  localhistory.ts
src/pages/about/: index.tsx
src/pages/batch/: index.tsx
src/pages/batch/component/: add-contact.tsx  contact-modal.tsx  contact-table.tsx  execution-card.tsx  execution.module.css  selecte-contact.tsx  transfer-form.tsx
src/pages/create/: index.tsx
src/pages/history/: index.tsx
src/pages/home/: index.tsx
src/pages/import/: index.tsx
src/pages/lock/: index.tsx
src/pages/log/: index.tsx
src/pages/settings/: index.tsx
src/pages/wallet/: index.tsx
src/routers/: index.tsx
src/store/: index.ts  types.ts
src/store/about/: about-slice.ts  hooks.ts
src/store/auth/: auth-slice.ts  hooks.ts
src/store/contact/: contact-slice.ts  hooks.ts
src/store/execution/: execution-slice.ts  hooks.ts
src/store/history/: history-slice.ts  hooks.ts
src/store/log/: hooks.ts  log-slice.ts
src/store/settings/: hooks.ts  settings-slice.ts
src/store/sync/: hooks.ts  sync-slice.ts
src/store/wallet/: hooks.ts  wallet-slice.ts
src/theme/: index.ts
src/utils/: RustySessionStore.ts  common.ts  ellipsis-format.ts  math-util.ts  url.ts
src/utils/api/: apis.ts  service.ts  types.ts
src/utils/storage/: index.ts
(+32 files in other folders)
