[workspace]
members = []
resolver = "2"

[package]
name = "xnt-wallet"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "wallet"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
chrono = "0.4.42"

[dependencies.neptune-privacy]
git = "ssh://git@github.com/VxBlocks/vxb-xnt-core.git"
branch = "wallet-server"
# rev = "ef59f1b"
default-features = false
features = ["rest"]

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
], optional = true }

tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }

anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "time", "fmt"] }
tokio-serde = { version = "0.8", features = ["bincode", "json"] }
reqwest = { version = "0.12.22", features = ["json", "socks"] }
num-traits = "0.2.19"
clap = "4.5.32"
# hyper = { version = "1.6.0", features = ["full"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"
p256 = { version = "0.13.2", features = ["ecdh"] }
sha2 = "0.10.8"
hyper-util = "0.1.10"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
axum-extra = { version = "0.10.0", features = ["erased-json", "typed-header"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
os_info = { version = "3.7.0", features = ["serde"] }
rand = "0.9.0"
hex = "0.4.3"
itertools = "0.14.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sqlx_migrator = { version = "0.17.0", features = ["sqlite"] }
dialoguer = { version = "0.11.0", optional = true }
once_cell = "1.21.3"
rayon = "1.10.0"
dashmap = "6.1.0"
zstd = "0.13.3"
thiserror = "2.0.12"
enum_dispatch = "0.3.13"
strum = "0.27.1"

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9.106", features = ["vendored"] }

[features]
default = ["gui"]
dev-release = [
    "tauri/devtools"
]
gui = [
    "dep:tauri",
    "dep:tauri-plugin-clipboard-manager",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-opener",
    "dep:tauri-build",
]

cli = ["dep:dialoguer"]

[profile.release.package.triton-vm]
opt-level = 3
debug = false
incremental = false
debug-assertions = false
overflow-checks = false

[profile.release]
panic = "abort"
opt-level = 3

[patch.crates-io]
leveldb-sys = { path = "../leveldb-sys" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(desktop)"] }
